Dark mode fixes

--- a/src/_includes/assets/css/themes/dry.css
+++ b/src/_includes/assets/css/themes/dry.css
@@ -34,13 +34,14 @@ p {
 }
 
 img:not(.social-icon),
-iframe {
+iframe,
+canvas {
   display: block;
   max-width: 100%;
   margin: 20px auto;
 }
 
-[data-theme="dark"] img {
+[data-theme="dark"] img.invert {
   filter: invert(1);
 }
 
@@ -107,7 +108,7 @@ a:hover {
 
 .post-list article,
 #latest article {
-  border: 1px solid #333;
+  border: 1px solid var(--color-fg);
   margin: 40px 0;
   padding: 20px;
 }
@@ -292,10 +293,10 @@ label.margin-toggle:not(.sidenote-number) {
     position: relative;
     z-index: -10;
     font-weight: 700;
-    background: #f2f2f2;
+    background: var(--color-code);
     border-radius: 3px;
     padding: 0 0.4em;
-    border: 1px solid #d9d9d9;
+    border: 1px solid var(--color-fg);
   }
   .margin-toggle:checked + .sidenote {
     display: block;
@@ -358,7 +359,14 @@ label.margin-toggle:not(.sidenote-number) {
   }
 
   .main {
+    max-width: 100vw;
     text-align: left;
+  }
+
+  iframe,
+  img,
+  canvas {
+    max-width: 100vw;
   }
 
   .page {
